use suprematism-scss colors, fix too low z-index

--- a/src/card-navbar/card-navbar.component.scss
+++ b/src/card-navbar/card-navbar.component.scss
@@ -1,6 +1,5 @@
-$blue: rgba(0, 137, 208, 1);
-$blue-transparent: rgba(0, 137, 208, .3);
-$gray: #999999;
+@import '../../node_modules/suprematism-scss/z-indexes';
+@import '../../node_modules/suprematism-scss/colors';
 
 .CardNavbar {
   display: block;
@@ -29,5 +28,5 @@ $gray: #999999;
 }
 .CardNavbar-cards {
   position: relative;
-  z-index: 888;
+  z-index: $z-index-dropdown-backdrop;
 }
