--- a/src/card-navbar/menu-item/menu-item.component.scss
+++ b/src/card-navbar/menu-item/menu-item.component.scss
@@ -1,6 +1,5 @@
-$blue: rgba(0, 137, 208, 1);
-$blue-transparent: rgba(0, 137, 208, .3);
-$gray: #999999;
+@import '../../../node_modules/suprematism-scss/colors';
+
 $white-transparent: rgba(255, 255, 255, .75);
 
 a {
